k8s/blog.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blog-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-web
  template:
    metadata:
      name: blog-web
      labels:
        app: blog-web
    spec:
      containers:
      - name: blog
        image: ghost
        ports:
        - name: http
          containerPort: 2368
---
kind: Service
apiVersion: v1
metadata:
  name: blog-web-loadbalancer
spec:
  selector:
    app: blog-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
  type: LoadBalancer
  loadBalancerIP: "35.209.243.209"
