k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb-nodeport
spec:
  type: NodePort
  selector:
    app: hello-app-deploy-label
  ports:
  - port: 8080
    targetPort: 80
